# keystone

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
Docs/: phase.md  rustdb.md  server_api.md
src/: bucket.rs  datastore.rs  error.rs  lib.rs
src/data/: chunking.rs  keys.rs  mock_storage.rs  mod.rs
src/storage/: mod.rs  redb_adapter.rs
tests/: api.rs  validation.rs
