[package]
name = "keystone"
version = "0.1.0"
edition = "2021"
authors = ["Keystone Team"]
description = "A pure-Rust object storage system built on redb"
license = "MIT"

[lib]
name = "keystone"
path = "src/lib.rs"

[dependencies]
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
