[package]
name = "keystone"
version = "0.1.0"
edition = "2021"
authors = ["Keystone Team"]
description = "A pure-Rust object storage system built on redb"
license = "MIT"

[lib]
name = "keystone"
path = "src/lib.rs"

[dependencies]
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "multipart", "tokio", "query"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde_json = "1.0"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"
